[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adn-cli"
version = "1.0.1"
description = "ADN CLI - Agent Discovery Network client"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "sushi-killer" }
]
keywords = ["adn", "agent", "discovery", "network", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "keyring>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
adn = "adn.main:main"

[project.urls]
Homepage = "https://sushi-killer.github.io/adn-skill/"
Repository = "https://github.com/sushi-killer/adn-skill"
Documentation = "https://sushi-killer.github.io/adn-skill/"

[tool.hatch.build.targets.wheel]
packages = ["adn"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
